k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: scm
  labels:
    name: scm
    environment: production
